NetBSD Problem Report #40133

From www@NetBSD.org  Sun Dec  7 18:00:06 2008
Return-Path: <www@NetBSD.org>
Received: from mail.netbsd.org (mail.netbsd.org [204.152.190.11])
	by narn.NetBSD.org (Postfix) with ESMTP id ACEFF63B89C
	for <gnats-bugs@gnats.netbsd.org>; Sun,  7 Dec 2008 18:00:06 +0000 (UTC)
Message-Id: <20081207180006.5A09E63B121@narn.NetBSD.org>
Date: Sun,  7 Dec 2008 18:00:06 +0000 (UTC)
From: roy@marples.name
Reply-To: roy@marples.name
To: gnats-bugs@NetBSD.org
Subject: Changing the connected subnet route results in error when removing origonal IP
X-Send-Pr-Version: www-1.0

>Number:         40133
>Category:       kern
>Synopsis:       Changing the connected subnet route results in error when removing origonal IP
>Confidential:   no
>Severity:       serious
>Priority:       medium
>Responsible:    kern-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Sun Dec 07 18:05:00 +0000 2008
>Closed-Date:    Sun Dec 21 19:09:53 +0000 2008
>Last-Modified:  Fri Jan 09 03:00:04 +0000 2009
>Originator:     Roy Marples
>Release:        5.0_BETA
>Organization:
>Environment:
NetBSD localhost 5.0_BETA NetBSD 5.0_BETA (UBERSERVER) #3: Sat Nov 22 08:09:44 GMT 2008  roy@uberserver.marples.name:/usr/obj/sys/arch/amd64/compile/UBERSERVER amd64
>Description:
If you have two IP addresses on two interfaces to the same subnet we can logically only have one route to the subnet over an interface. Using the route change command we CAN change the interface used for the subnet, however it is then impossible to remove or re-add the address/subnet to the first interface.
>How-To-Repeat:
!/bin/sh -x

ifp1=re0
ifa1=192.168.1.10/24
ifp2=ral0
ifa2=192.168.1.20/24
snr=192.168.1.0/24

# Configure ifa's
ifconfig $ifp1 alias $ifa1
ifconfig $ifp2 alias $ifa2

# Connect ifp2
route change $snr -ifp $ifp2

# Remove and then add ifa1. The add should fail - this is a bug.
ifconfig $ifp1 -alias $ifa1
ifconfig $ifp1 alias $ifa1
ifconfig $ifp1

# Remove all aliases now
route delete $snr
ifconfig $ifp1 -alias $ifa1
ifconfig $ifp2 -alias $ifa2

>Fix:

>Release-Note:

>Audit-Trail:

State-Changed-From-To: open->closed
State-Changed-By: roy@NetBSD.org
State-Changed-When: Sun, 21 Dec 2008 19:09:53 +0000
State-Changed-Why:
Fixed in sys/netinet/in.c rev 1.130


From: Roy Marples <roy@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/40133 CVS commit: src/sys/netinet
Date: Sun, 21 Dec 2008 19:07:35 +0000 (UTC)

 Module Name:	src
 Committed By:	roy
 Date:		Sun Dec 21 19:07:35 UTC 2008

 Modified Files:
 	src/sys/netinet: in.c

 Log Message:
 The automatic addition of a subnet route should not error if a manually
 added route already exists. Fixes PR kern/40133.


 To generate a diff of this commit:
 cvs rdiff -r1.129 -r1.130 src/sys/netinet/in.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

From: Soren Jacobsen <snj@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/40133 CVS commit: [netbsd-5] src/sys/netinet
Date: Fri,  9 Jan 2009 02:57:34 +0000 (UTC)

 Module Name:	src
 Committed By:	snj
 Date:		Fri Jan  9 02:57:34 UTC 2009

 Modified Files:
 	src/sys/netinet [netbsd-5]: in.c

 Log Message:
 Pull up following revision(s) (requested by roy in ticket #239):
 	sys/netinet/in.c: revision 1.130
 The automatic addition of a subnet route should not error if a manually
 added route already exists. Fixes PR kern/40133.


 To generate a diff of this commit:
 cvs rdiff -r1.127 -r1.127.4.1 src/sys/netinet/in.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.