The automatic addition of a subnet route should not error if a manually added route already exists. Fixes PR kern/40133.